Bug 518874 - "Regular" font not recognized
Summary: "Regular" font not recognized
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 5.3.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-12 17:10 UTC by marc1my2words2
Modified: 2026-07-06 18:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Demonstration of the bug. The small text on the left is taken from the preview image and the large text, now in Italics, is taken from the project file view. (5.36 KB, image/png)
2026-04-12 17:10 UTC, marc1my2words2
Details

Note You need to log in before you can comment on or make changes to this bug.
Description marc1my2words2 2026-04-12 17:10:21 UTC
Created attachment 191476 [details]
Demonstration of the bug. The small text on the left is taken from the preview image and the large text, now in Italics, is taken from the project file view.

Krita has stopped displaying the "Regular" font variant for Calibri at some point. In the past, Calibri Regular was selectable in the past, but at some point between 5.3.0beta3 and the final 5.3.0 release, it stopped showing up in the Font Family list and the change reflected in the project file that had the "Regular" variant selected, which now defaulted to Italic.

STEPS TO REPRODUCE
1. Start a project file in Krita 5.3.0beta3.
2. Create two text objects and set one to Calibri Regular and another to another variant of Calibri.
3. Save project file.
4. Update to 5.3.0/5.3.1.
5. Open the project file previously made in 5.3.0beta3.

OBSERVED RESULT
Calibri Regular is no longer selectable and the text object that was set to it is now defaulting to Calibri Italic.

EXPECTED RESULT
Calibri Regular remains selectable and the text object that was set to it stays set to that variant.

SOFTWARE/OS VERSIONS
Windows: 11 25H2 KB5072033
Qt Version: 5.15.11 (PyQt)

ADDITIONAL INFORMATION
git hash: 9069dbc0a2702d366ebd966ad6ccca812b0ed8d7
Comment 1 marc1my2words2 2026-04-12 17:13:37 UTC
It seems I mistakenly copied over the outdated system information from my last bug report so here's the corrected bit for Windows.

Windows: 11 25H2 2026-03 Update (KB5086672) (26200.8117)
Comment 2 wolthera 2026-04-24 12:14:13 UTC
Git commit 18b0ff698ce29d9614bdd8a7e096b067c2081368 by Wolthera van Hövell tot Westerflier.
Committed on 24/04/2026 at 12:01.
Pushed by woltherav into branch 'master'.

Fix font style-selection search algorithm in text properties docker.

M  +14   -3    plugins/dockers/textproperties/FontStyleModel.cpp

https://invent.kde.org/graphics/krita/-/commit/18b0ff698ce29d9614bdd8a7e096b067c2081368
Comment 3 wolthera 2026-04-24 12:16:34 UTC
Git commit edb81a3f8a96539c919bd040dc7fed2c236ae49d by Wolthera van Hövell.
Committed on 24/04/2026 at 12:16.
Pushed by woltherav into branch 'krita/6.0'.

Fix font style-selection search algorithm in text properties docker.


(cherry picked from commit 18b0ff698ce29d9614bdd8a7e096b067c2081368)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>

M  +14   -3    plugins/dockers/textproperties/FontStyleModel.cpp

https://invent.kde.org/graphics/krita/-/commit/edb81a3f8a96539c919bd040dc7fed2c236ae49d
Comment 4 wolthera 2026-04-24 12:18:51 UTC
Hey,

I've just done a fix where it somehow understood italic to be a regular, and thus selecting it incorrectly. Can you test the next Krita plus (tomorrow, day after), to see if this fixes it? If it doesn't, I'll need that Kra file (and I'll need to find a copy of the calibri family, but that's another story).
Comment 5 marc1my2words2 2026-05-26 01:43:38 UTC
(In reply to wolthera from comment #4)
> Hey,
> 
> I've just done a fix where it somehow understood italic to be a regular, and
> thus selecting it incorrectly. Can you test the next Krita plus (tomorrow,
> day after), to see if this fixes it? If it doesn't, I'll need that Kra file
> (and I'll need to find a copy of the calibri family, but that's another
> story).

It seems that the Regular variant now shows up again, but as a separate font family from the existing Calibri font family, which had previously stopped giving me that variant between 5.3.0beta3 and 5.3.0.
Comment 6 wolthera 2026-05-28 11:39:11 UTC
Git commit 345bd16ae4942d8b2f2b0136862423e92375d4ef by Wolthera van Hövell tot Westerflier.
Committed on 28/05/2026 at 11:36.
Pushed by woltherav into branch 'master'.

Fix recognising fonts with mixed wws-only state.

When the regular font had no wws-only flag set, but related fonts did,
the wws node would be generated for the related fonts first, and the
regular font would never be sorted into that. We now also generate
a wws node for the regular font.

M  +31   -22   libs/flake/text/KoFFWWSConverter.cpp

https://invent.kde.org/graphics/krita/-/commit/345bd16ae4942d8b2f2b0136862423e92375d4ef
Comment 7 wolthera 2026-05-28 11:40:24 UTC
Ok, the latest fix I did works with calibri, but it needs a lot of testing. Please check the next nightly (krita:next) to see if I didn't break any other font families, and then we can backport this to krita:plus (and then finally it'll end up in a bugfix release).
Comment 8 wolthera 2026-05-28 15:18:07 UTC
Nevermind, I reverted it: Caused crashes.
Comment 9 wolthera 2026-07-06 18:31:00 UTC
Git commit 52dba82bd263231e31bd2ae98125e0f67c52d259 by Wolthera van Hövell, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 06/07/2026 at 18:30.
Pushed by woltherav into branch 'master'.

Fix font-family sorting for fonts with wwsWithoutName set mixed.

We do this by ignoring the wwsWithoutName flag, as Krita's sorting
algorithm can handle these cases just fine without.

M  +2    -26   libs/flake/text/KoFFWWSConverter.cpp

https://invent.kde.org/graphics/krita/-/commit/52dba82bd263231e31bd2ae98125e0f67c52d259
Comment 10 wolthera 2026-07-06 18:33:44 UTC
Git commit 5deb9399548fb1dc4cacabb68395d65cba6df185 by Wolthera van Hövell tot Westerflier.
Committed on 06/07/2026 at 18:33.
Pushed by woltherav into branch 'krita/6.0'.

Fix font-family sorting for fonts with wwsWithoutName set mixed.

We do this by ignoring the wwsWithoutName flag, as Krita's sorting
algorithm can handle these cases just fine without.

M  +2    -26   libs/flake/text/KoFFWWSConverter.cpp

https://invent.kde.org/graphics/krita/-/commit/5deb9399548fb1dc4cacabb68395d65cba6df185