Fix recognising fonts with mixed wws-only state.

When the regular font had no wws-only flag set, but related fonts did,
the wws node would be generated for the related fonts first, and the
regular font would never be sorted into that. We now also generate
a wws node for the regular font.

BUG:518874